fix: fix doc page layout shift

--- a/packages/plugin-docs/client/theme-doc/tailwind.css
+++ b/packages/plugin-docs/client/theme-doc/tailwind.css
@@ -219,6 +219,10 @@ article hr {
   );
 }
 
+body {
+  overflow-y: scroll;
+}
+
 html {
   scroll-behavior: smooth;
 }
